# aws-cloudfront-site

./: .gitignore  README.md  acm.tf  cloudfront.tf  cloudwatch.tf  data.tf  main.tf  makefile  moved.tf  observability.tf  outputs.tf  preview.tf  providers.tf  route53.tf  s3.tf  variables.tf  versions.tf
.config/: checkov.yml  pre-commit-config.yml  terraform-docs.yml  trivy.yaml
.github/workflows/: terraform.yml
env/: production.tfvars
functions/: redirect-www.js
functions/telegram-notify/: lambda_function.py  pyproject.toml
functions/telegram-notify/tests/: conftest.py
functions/telegram-notify/tests/events/: alarm_metric_math.json  alarm_simple_metric.json  insufficient_data.json  ok_metric_math.json
functions/telegram-notify/tests/live/: conftest.py  test_invoke.py
functions/telegram-notify/tests/unit/: test_message_format.py
modules/site/: main.tf  outputs.tf  variables.tf  versions.tf
modules/site/functions/: redirect-www.js  security-headers.js
