[project]
name = "telegram-notify"
version = "0.1.0"
description = "Forward CloudWatch Alarm notifications to Telegram."
requires-python = ">=3.14"
dependencies = [
    "aws-lambda-powertools>=3.0",
]

[dependency-groups]
dev = [
    "boto3>=1.34",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not live'"
markers = [
    "live: requires AWS credentials and a deployed Lambda; fires real Telegram messages",
]
